<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.manmanadmin.finished.FinishedRequestsViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/title_expense_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/rounded_corners_et"
            android:hint="@string/title"
            android:maxLength="40"
            style="@style/edit_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/details_expense_et"
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_margin="16dp"
            android:gravity="top"
            android:scrollbars="vertical"
            android:hint="@string/add_the_expense_details"
            android:inputType="textMultiLine"
            style="@style/edit_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title_expense_et" />

        <TextView
            style="@style/type_txt_details"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_marginStart="16dp"
            android:text="@string/expense_price"
            app:layout_constraintBottom_toBottomOf="@+id/price_expense_et"
            app:layout_constraintEnd_toStartOf="@+id/price_expense_et"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/price_expense_et" />

        <EditText
            android:id="@+id/price_expense_et"
            style="@style/edit_text"
            android:layout_width="96dp"
            android:gravity="center"
            android:inputType="numberDecimal"
            android:imeOptions="actionDone"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/details_expense_et" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>