<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.manmanadmin.reviewing.checkout.CheckoutFragmentViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:background="@drawable/ic_back_manchas_02"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".set_up_transaction.transaction_checkout.CheckoutFragment">

            <include
                android:id="@+id/included_toolbar_layout"
                layout="@layout/tool_bar_included_layout"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="32dp"
                android:background="@drawable/round_corners"
                android:elevation="10dp"
                android:padding="32dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/included_toolbar_layout">

                <TextView
                    android:id="@+id/textView"
                    style="@style/address_reference_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:text="@{viewModel.transactionItem.title}"
                    app:layout_constraintBottom_toTopOf="@+id/textView5"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Titulo de mi mandado Titulo de mi mandado Titulo de mi mandado Titulo de mi mandado" />

                <TextView
                    android:id="@+id/textView5"
                    style="@style/type_txt_details"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="10"
                    android:text="@{viewModel.transactionItem.details}"
                    app:layout_constraintBottom_toTopOf="@+id/textView7"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/city"
                    app:layout_constraintBottom_toTopOf="@+id/textView10"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    app:layout_constraintBottom_toTopOf="@+id/price_et"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:setJourneyString="@{viewModel.journeyLiveData}"
                    tools:text="Diriamba - Jinotepe" />

                <EditText
                    android:id="@+id/price_et"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:inputType="numberDecimal"
                    android:background="@color/fragment_background"
                    app:setThePriceText='@{viewModel.priceForThisRequest}'
                    app:layout_constraintBaseline_toBaselineOf="@+id/textView8"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/guideline3" />

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guideline3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.75" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/textView11"
                android:layout_width="0dp"
                android:background="@drawable/rounded_corners_et_white"
                android:padding="8dp"
                android:elevation="10dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="16dp"
                android:text="@string/text_for_referece"
                android:textColor="@color/pending_color"
                android:textStyle="italic"
                android:textSize="12sp"
                app:layout_constraintBottom_toTopOf="@+id/update_request_btn"
                app:layout_constraintEnd_toEndOf="@+id/constraintLayout"
                app:layout_constraintStart_toStartOf="@+id/constraintLayout"
                app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

            <Button
                android:id="@+id/update_request_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:text="@string/update_request"
                android:enabled="@{viewModel.priceForThisRequest != null}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/textView11"
                app:layout_constraintStart_toStartOf="@+id/textView11"
                style="@style/my_btn_style" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>